[package]
name = "cover"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.32", features = ["vendored"] }
git2 = "0.13.22"
anyhow="1.0.44"
log = "0.4.14"
env_logger= "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json="1.0"
regex = "1.5.5"
